debugging modal issue- discovered that modal for bootstrap is working on IE but the javascript file is not running on IE, as its a work computer, i see if there is any restrictions and further debug tomorrow

--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -357,7 +357,7 @@ Padding-top: 10px;
 }
 
 #setup-game-modal{
-  
+  display:none;
 }
 
 
